--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.19", features = ["derive"] }
 dialoguer = "0.11.0"
 dirs = "5.0.1"
+regex = "1.11.0"
+reqwest = { version = "0.12.8", features = ["blocking", "json"] }
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.8.19"
