--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,19 @@ name = "forge_move"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "forge_reset"
+path = "src/bin/reset.rs"
+
 [dependencies]
 chrono = "0.4.38"
 clap = { version = "4.5.19", features = ["derive"] }
 dialoguer = "0.11.0"
 dirs = "5.0.1"
+rand = "0.8.5"
 regex = "1.11.0"
 reqwest = { version = "0.12.8", features = ["blocking", "json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8.19"
+wait-timeout = "0.2.0"
